--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         pip install -r requirements.txt
         pip install pyinstaller
     - name: Build executable
-      run: pyinstaller --onefile main.py
+      run: pyinstaller --onefile --noconsole --name unexCorner main.py
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
