--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,17 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pyinstaller
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt-get update
+          sudo apt-get install -y upx
+        fi
     - name: Build executable
-      run: pyinstaller --onefile --noconsole --name unexCorner main.py
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          pyinstaller --onefile --noconsole --strip --upx-dir=/usr/bin --name unexCorner main.py
+        else
+          pyinstaller --onefile --noconsole --name unexCorner main.py
+        fi
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
