--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         python-version: '3.9'
     - name: Install dependencies
+      shell: bash
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -28,6 +29,7 @@ jobs:
           sudo apt-get install -y upx
         fi
     - name: Build executable
+      shell: bash
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
           pyinstaller --onefile --noconsole --strip --upx-dir=/usr/bin --name unexCorner main.py
